--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -232,7 +232,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="./TP.exe"
+export_path="Build/TP.exe"
 script_export_mode=1
 script_encryption_key=""
 
